--- a/platforms/mean/client/index.html
+++ b/platforms/mean/client/index.html
@@ -92,10 +92,13 @@
     <script src="views/scenes/dashboard/dashboard.module.js" type="text/javascript"></script>
     <script src="views/scenes/dashboard/dashboard.config.js" type="text/javascript"></script>
     <script src="views/scenes/dashboard/dashboard.controller.js" type="text/javascript"></script>
-
     <script src="views/scenes/connections/connections.module.js" type="text/javascript"></script>
     <script src="views/scenes/connections/connections.config.js" type="text/javascript"></script>
     <script src="views/scenes/connections/connections.controller.js" type="text/javascript"></script>
+
+    <script src="views/scenes/redirectAppUrl/redirectAppUrl.module.js" type="text/javascript"></script>
+    <script src="views/scenes/redirectAppUrl/redirectAppUrl.config.js" type="text/javascript"></script>
+    <script src="views/scenes/redirectAppUrl/redirectAppUrl.controller.js" type="text/javascript"></script>
 
     <script src="views/scenes/invoice/invoice.module.js" type="text/javascript"></script>
     <script src="views/scenes/invoice/invoice.config.js" type="text/javascript"></script>
@@ -187,6 +190,8 @@
     <script src="views/components/page-header/header.controller.js" type="text/javascript"></script>
     <script src="views/components/topbar/topbar.directive.js" type="text/javascript"></script>
     <script src="views/components/topbar/topbar.controller.js" type="text/javascript"></script>
+    <script src="views/components/light/light.directive.js" type="text/javascript"></script>
+    <script src="views/components/light/light.controller.js" type="text/javascript"></script>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.time.min.js"  type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.resize.js"  type="text/javascript"></script>
