--- a/platforms/mean/client/index.html
+++ b/platforms/mean/client/index.html
@@ -41,7 +41,7 @@
     <div ng-activity-indicator="CircledWhite"></div>
     <div class="c-sidebar" sidebar></div>
     <settings></settings>
-    <script src="https://maps.google.com/maps/api/js"></script>
+    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDb4xBED_28r06w5qVBVmPbsVl_hiMkwRo"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
     <script src="config/config.js" type="text/javascript"></script>
     
